plugins {
    id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
}
javafx {
    version = "23.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}
repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:23.0.1'
    implementation 'org.openjfx:javafx-fxml:23.0.1'
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
}

application {
    mainClass = 'com.ecole_primaire.HomeController'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.withType(JavaExec).configureEach {
    jvmArgs = [
        '--module-path', '/lib/jvm/javafx-sdk-23.0.1/lib',
        '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
